# BTL_HDH

./: CMakeLists.txt  README.md  test22.txt
client/: client.cpp  file_transfer.cpp
include/: checksum_utils.h  file_manager.h  file_transfer.h
server/: file_manager.cpp  file_manager3.cpp  server.cpp
uploads/: test1.txt
uploads/huhu/: test3.txt  test4.txt
